c5 - alterando paragrafo do autor e inserindo link na home

--- a/autor.html
+++ b/autor.html
@@ -2,7 +2,7 @@
     <body>
         <h2>Sobre o autor:</h2>        
 
-        <p>Meu nome é Marcelo Marcondes</p>
+        <p>Meu nome é Marcelo Marcondes e sou aluno.</p>
 
     </body>
 
