c6 - inserindo logo na home

--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
     <body>
         <<h2>Meu Curso:</h2>
 
+        <img src="img/em_construcao1.jpg">
+
         <a href="autor.html">Autor</a>
     </body>
 
