c9 - criando uma lista de cursos

--- a/home.html
+++ b/home.html
@@ -2,7 +2,12 @@
     <body>
         <<h2>Meu Curso:</h2>
 
-        <img src="img/em_construcao1.jpg">
+        <img src="img/em_construcao1.jpg" height="200" width="250">
+
+        <ul>
+            <li>Curso avançado de Git</li>
+            <li>Curso avançado de HTML</li>
+        </ul>
 
         <a href="autor.html">Autor</a>
     </body>
